# ASC-ODE

./: .buildinfo  CMakeLists.txt  README.md  legendre.csv  linear_error_vs_tau.csv  pendulum_euler.csv  pendulum_rk2.csv  pendulum_rk4.csv
demos/: demo_autodiff.cpp.backup  demo_rk.cpp  test_ode.cpp
demos/.ipynb_checkpoints/: demo_autodiff-checkpoint.cpp
include/: CrankNicolson.hpp  ExplicitEuler.hpp  ImplicitEuler.hpp  ImprovedEuler.hpp  RCNetwork.hpp  plot_autodiff_legendre.py  plot_rk_results.py  timestepper.hpp
include/.ipynb_checkpoints/: mass_spring-checkpoint.hpp  plot_mass_spring-checkpoint.py  plot_rc-checkpoint.py
local_pybind11/pybind11-3.0.1.dist-info/: RECORD
src/: bindings.cpp  compare_all  explicit_rk.hpp  matrix.hpp  nonlinfunc.hpp  timestepper.hpp  vector.hpp
src/.ipynb_checkpoints/: CrankNicolson-checkpoint.hpp  ImplicitEuler-checkpoint.hpp  ImprovedEuler-checkpoint.hpp  Newton-checkpoint.hpp  bindings-checkpoint.cpp  function_algebra-checkpoint.hpp  main-checkpoint.cpp  mass_spring_function-checkpoint.hpp  myfunction-checkpoint.hpp  newton-checkpoint.hpp  timestepper-checkpoint.cpp  timestepper-checkpoint.hpp
